--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,12 +74,37 @@ services:
     depends_on:
       - kafka
       - schema-registry
+    ports:
+      - "8088:8088"
     environment:
       KSQL_CUB_KAFKA_TIMEOUT: 120
       KSQL_BOOTSTRAP_SERVERS: kafka:29092
       KSQL_LISTENERS: http://0.0.0.0:8088
       KSQL_KSQL_SCHEMA_REGISTRY_URL: http://schema-registry:8081
       KSQL_KSQL_SERVICE_ID: confluent_ksql_streams_01
+
+  control-center:
+    image: confluentinc/cp-enterprise-control-center:5.1.1
+    container_name: control-center
+    restart: always
+    depends_on:
+      - zookeeper
+      - kafka
+      - kafka-connect-cp
+    ports:
+      - "9021:9021"
+    environment:
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: "kafka:29092"
+      CONTROL_CENTER_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      CONTROL_CENTER_REPLICATION_FACTOR: 1
+      CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_REPLICATION: 1
+      CONTROL_CENTER_INTERNAL_TOPICS_REPLICATION: 1
+      CONTROL_CENTER_COMMAND_TOPIC_REPLICATION: 1
+      CONTROL_CENTER_METRICS_TOPIC_REPLICATION: 1
+      CONTROL_CENTER_STREAMS_NUM_STREAM_THREADS: 1
+      CONTROL_CENTER_KSQL_URL: "http://ksql-server:8088"
+      CONTROL_CENTER_KSQL_ADVERTISED_URL: "http://ksql-server:8088"
+      CONTROL_CENTER_STREAMS_CONSUMER_REQUEST_TIMEOUT_MS: "960032"
 
   # Runs the Kafka KSQL data generator for ratings
   datagen-ratings:
